--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,11 @@
         <item>DDOT</item>
         <item>Reflex</item>
     </string-array>
+
+    <string-array name="testRoutes">
+        <item>125</item>
+        <item>130</item>
+        <item>150</item>
+    </string-array>
+
 </resources>
